duihome (0.21.17~1) unstable; urgency=low

  * [UNRELEASED]

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 29 Jul 2010 12:52:21 +0300

duihome (0.21.16-1) unstable; urgency=low

  * Fixes: NB#178843 - switcher goes to wrong page when minimizing the 5th application for the first time
  * Fixes: NB#178834 - on switcher orientation switch, background color is incorrect
  * ut_pagedpanning execution time improvement

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 29 Jul 2010 11:52:00 +0300

duihome (0.21.15-1) unstable; urgency=low

  * Implemented: SWP#DUI-3250 Switcher should stack windows of same task on top of each other
  * Fixes: NB#178219 - Launcher view is not shown according to the page indicator
  * Fixes: NB#176914 - Shortcut icons on the homescreen are out of alignment
  * Fixes: NB#174025 - launcher closes when device screen dims

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 15 Jul 2010 20:03:33 +0300

duihome (0.21.14-1) unstable; urgency=low

  * Implemented: SWP#DUI-3399 Dim switcher background when there's content on the switcher
  * Fixes: NB#176918 - Shading out of background wallpaper not dark enough.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 02 Jul 2010 15:19:34 +0300

duihome (0.21.13-1) unstable; urgency=low

  * Fixes: NB#174923 - Minimize/maximize animation end/begins at the edge of the screen
  * Switcher detail view is usable again (if enabled)

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 30 Jun 2010 19:31:16 +0300

duihome (0.21.12-1) unstable; urgency=low

  * Implemented: SWP#3148 Verify tappability of switcher thumbnail close button
  * Implemented: SWP#DUI-3336 Application start-up indication
  * Implemented: SWP#DUI-3244 Remove customized handling of call UI windows in switcher
  * Fixes: NB#176177 - Launcher buttons are not placed in their expected positions

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 28 Jun 2010 17:59:51 +0300

duihome (0.21.11-2) unstable; urgency=low
