@@ -83,9 +83,6 @@ protected slots:
     virtual void updateData(const QList<const char *>& modifications);
     //! \endcond
 
-    /*! Pan to switcher page containing the button corresponding to the topmost window */
-    void panToSwitcherPage(QList<WindowInfo> windowList);
-
 private slots:
     /*! Listens for page change in the paged viewport */
     void updateFocusedButton(int currentPage);
@@ -97,6 +94,8 @@ private slots:
     void updateButtons();
 
 private:
+    /*! Repositions the switcher so that the visible page is reflects the topmost application */
+    void repositionSwitcher();
 
     /*! Adds a button in the correct position in the overview layout policy */
     void addButtonInOverviewPolicy(QSharedPointer<SwitcherButton> button);
